css 수정 및 정리

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -7,25 +7,10 @@
     font-style: normal;
 }
 
-
-@font-face {
-    font-family: 'KNUTRUTHTTF';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2312-1@1.1/KNUTRUTHTTF.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
 @font-face {
     font-family: 'omyu_pretty';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-01@1.0/omyu_pretty.woff2') format('woff2');
     font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Cafe24Supermagic-Bold-v1.0';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-2@1.0/Cafe24Supermagic-Bold-v1.0.woff2') format('woff2');
-    font-weight: 700;
     font-style: normal;
 }
 
@@ -36,11 +21,17 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'NEXON Lv2 Gothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 :root {
     --default-font: 'NanumSquareNeo-Variable', sans-serif;
     --body-font: 'Pretendard-Regular', sans-serif;
-    --code-font: 'Roboto', sans-serif;
+    --code-font: 'NEXON Lv2 Gothic', sans-serif;
     --japanese-font: 'M PLUS 1p', sans-serif;
     --handwriting-font: 'omyu_pretty', sans-serif;
   }
@@ -89,3 +80,6 @@ h6 {
     font-size: 1.1em !important;
 }
 
+code {
+    font-family: var(--code-font), var(--default-font), 'monospace' ;
+}
