--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,5 @@
 {{ if or .Params.math .Site.Params.math }}
 {{ partial "math.html" . }}
 {{ end }}
+
+<meta name="naver-site-verification" content="d97213b0a457aa3a8557ea4dc8a101a898c10a97" />
